--- a/views/room-information.ejs
+++ b/views/room-information.ejs
@@ -29,7 +29,7 @@
                                         platform to empower local artists and creatives - we recognize who we are, know that we have a voice and we use it
                                         to
                                         build the creative good in all people.</div>
-                                        <div class="form-group probootstrap-cta-button-wrap" style="padding-top: 15px;"><a href="#" class="btn btn-primary">Reserve Now</a>
+                                        <div class="form-group probootstrap-cta-button-wrap" style="padding-top: 15px;"><a href="/reservation" class="btn btn-primary">Reserve Now</a>
                                 </div>
                                 </div>
                             </div>
@@ -68,7 +68,7 @@
                     </div>
                 </div>
             </div>
-                        <div class="col-md-3 form-group probootstrap-cta-button-wrap"><a href="#" class="btn btn-primary">View in 3d</a>
+                        <div class="col-md-3 form-group probootstrap-cta-button-wrap"><a href="https://canvas.io/viewer/9WeH-j0O?instacad"  target="_blank" class="btn btn-primary">View in 3d</a>
                         </div>
         </div>
     </section>
@@ -93,6 +93,10 @@
                 </div>
             </div>
         </section>
+
+        <!-- <section>
+            <iframe src="https://canvas.io/viewer/9WeH-j0O?instacad" height="200" width="300" title="Iframe Example"></iframe>
+        </section> -->
 
         <!-- START: footer -->
         <%- include ../views/partials/footer.ejs %>
