--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,3 +9,6 @@
 <link rel="stylesheet" href="stylesheets/styles-merged.css">
 <link rel="stylesheet" href="stylesheets/style.min.css">
 <link rel="stylesheet" href="stylesheets/custom.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.10.5/viewer.css"
+    integrity="sha512-c7kgo7PyRiLnl7mPdTDaH0dUhJMpij4aXRMOHmXaFCu96jInpKc8sZ2U6lby3+mOpLSSlAndRtH6dIonO9qVEQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
