--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -1,3 +1,6 @@
 <script src="javascripts/scripts.min.js"></script>
 <script src="javascripts/main.min.js"></script>
 <script src="javascripts/custom.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.10.5/viewer.min.js"
+    integrity="sha512-i5q29evO2Z4FHGCO+d5VLrwgre/l+vaud5qsVqQbPXvHmD9obORDrPIGFpP2+ep+HY+z41kAmVFRHqQAjSROmA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
