--- a/views/receipt.ejs
+++ b/views/receipt.ejs
@@ -103,17 +103,14 @@
             outline: none;
         }
     </style>
+        <%- include ../views/partials/head.ejs %>
+
 
 </head>
 
 <body style="background-color: #ffffff;">
 
-    <!-- start preheader -->
-    <div class="preheader"
-        style="display: none; max-width: 0; max-height: 0; overflow: hidden; font-size: 1px; line-height: 1px; color: #fff; opacity: 0;">
-        A preheader is the short summary text that follows the subject line when an email is viewed in the inbox.
-    </div>
-    <!-- end preheader -->
+    <%- include ../views/partials/header.ejs %>
 
     <!-- start body -->
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
@@ -126,7 +123,7 @@
         <tr>
         <td align="center" valign="top" width="600">
         <![endif]-->
-                <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
+                <!-- <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                     <tr>
                         <td align="center" valign="top" style="padding: 36px 24px;">
                             <a href="https://sendgrid.com" target="_blank" style="display: inline-block;">
@@ -135,7 +132,7 @@
                             </a>
                         </td>
                     </tr>
-                </table>
+                </table> -->
                 <!--[if (gte mso 9)|(IE)]>
         </td>
         </tr>
@@ -159,7 +156,7 @@
                             style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
                             <h1
                                 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">
-                                Thank you for your order!</h1>
+                                You have successfully booked your room!</h1>
                         </td>
                     </tr>
                 </table>
@@ -186,8 +183,8 @@
                     <tr>
                         <td align="left" bgcolor="#ffffff"
                             style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-                            <p style="margin: 0;">Here is a summary of your recent order. If you have any questions or
-                                concerns about your order, please <a href="https://sendgrid.com">contact us</a>.</p>
+                            <p style="margin: 0;">Here is a summary of your recent booking. If you have any questions or
+                                concerns about your order, please <a href="#">contact us</a>.</p>
                         </td>
                     </tr>
                     <!-- end copy -->
@@ -217,7 +214,7 @@
                                     <td align="left" bgcolor="#ffffff" width="25%"
                                         style="padding: 12px;font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
                                         <strong>
-                                            <%= room.name %>
+                                            <%= room.roomInformation.name %>
                                         </strong>
                                     </td>
                                 </tr>
@@ -235,7 +232,7 @@
                                         Room</td>
                                     <td align="left" width="25%"
                                         style="padding: 6px 12px;font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-                                        $24.00</td>
+                                        $<%= room.roomInformation.price %></td>
                                 </tr>
                                 <tr>
                                     <td align="left" width="75%"
@@ -256,10 +253,10 @@
                                 <tr>
                                     <td align="left" width="75%"
                                         style="padding: 6px 12px;font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-                                        Sales Tax</td>
+                                        No. of days booked</td>
                                     <td align="left" width="25%"
                                         style="padding: 6px 12px;font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-                                        $0.00</td>
+                                        <%= room.daysBooked %></td>
                                 </tr>
                                 <tr>
                                     <td align="left" width="75%"
@@ -267,7 +264,7 @@
                                         <strong>Total</strong></td>
                                     <td align="left" width="25%"
                                         style="padding: 12px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px; border-top: 2px dashed #ffffff; border-bottom: 2px dashed #ffffff;">
-                                        <strong>$54.00</strong></td>
+                                        <strong>$<%= room.totalPrice %></strong></td>
                                 </tr>
                             </table>
                         </td>
@@ -356,31 +353,7 @@
         <tr>
         <td align="center" valign="top" width="600">
         <![endif]-->
-                <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-
-                    <!-- start permission -->
-                    <tr>
-                        <td align="center" bgcolor="#ffffff"
-                            style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
-                            <p style="margin: 0;">You received this email because we received a request for
-                                [type_of_action] for your account. If you didn't request [type_of_action] you can safely
-                                delete this email.</p>
-                        </td>
-                    </tr>
-                    <!-- end permission -->
-
-                    <!-- start unsubscribe -->
-                    <tr>
-                        <td align="center" bgcolor="#ffffff"
-                            style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
-                            <p style="margin: 0;">To stop receiving these emails, you can <a href="https://sendgrid.com"
-                                    target="_blank">unsubscribe</a> at any time.</p>
-                            <p style="margin: 0;">Paste 1234 S. Broadway St. City, State 12345</p>
-                        </td>
-                    </tr>
-                    <!-- end unsubscribe -->
-
-                </table>
+               
                 <!--[if (gte mso 9)|(IE)]>
         </td>
         </tr>
