--- a/views/room-information.ejs
+++ b/views/room-information.ejs
@@ -65,6 +65,16 @@
                                 <img src="<%= room.images.image2 %>" alt=" " class="img-responsive">
                             </div>
                         </div>
+                        <div class="item">
+                            <div class="probootstrap-room">
+                                <img src="<%= room.images.image3 %>" alt=" " class="img-responsive">
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="probootstrap-room">
+                                <img src="<%= room.images.image4 %>" alt=" " class="img-responsive">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
