--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,4 +1,10 @@
 /* Your custom css code goes here */
-.modal-content {
+/* .modal-content {
   background-color: transparent;
+} */
+
+
+model-viewer {
+  width: 100%;
+  height: 700px;
 }
