--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
             <ul class="probootstrap-main-nav">
                 <li class=""><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
-                <li><a href="/rooms">Our Rooms</a></li>
+                <li><a href="/all-rooms">Our Rooms</a></li>
                 <li class="hidden-xs probootstrap-logo-center"><a href="/"><img src="images/logo_md.png" class="hires"
                             width="181" height="50" alt=" "></a></li>
                 <li><a href="/reservation">Reservation</a></li>
