--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -55,13 +55,13 @@
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label for="fname">First Name</label>
-                                        <input type="text" class="form-control" id="fname" name="fname" required>
+                                        <input type="text" class="form-control" id="fname" name="fname" maxlength="15" required>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label for="lname">Last Name</label>
-                                        <input type="text" class="form-control" id="lname" name="lname" required>
+                                        <input type="text" class="form-control" id="lname" name="lname" maxlength="15" required>
                                     </div>
                                 </div>
                             </div>
