--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -45,25 +45,25 @@
 
 
 
-                        <form action="/reserve-room" method="post" class="probootstrap-form">
+                        <form action="/reserve-room" method="post" class="probootstrap-form" id="reserveRoomForm">
                             <div class="row">
-                                <% if(message.length> 0){ %>
-                                    <div class="col-12 alert alert-danger">
-                                    <%= message %>
-                                    </div>
-                                        <% } %>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label for="fname">First Name</label>
-                                        <input type="text" class="form-control" id="fname" name="fname" maxlength="15" required>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label for="lname">Last Name</label>
-                                        <input type="text" class="form-control" id="lname" name="lname" maxlength="15" required>
-                                    </div>
-                                </div>
+                              
+                                <div class="errorMessage"></div>
+                                   
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label for="fname">First Name</label>
+                                                <input type="text" class="form-control" id="fname" name="fname"
+                                                    maxlength="15" required>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label for="lname">Last Name</label>
+                                                <input type="text" class="form-control" id="lname" name="lname"
+                                                    maxlength="15" required>
+                                            </div>
+                                        </div>
                             </div>
                             <div class="form-group">
                                 <label for="email">Email</label>
@@ -191,6 +191,7 @@
             </div>
         </section>
 
+
         <!-- START: footer -->
         <%- include ../views/partials/footer.ejs %>
 
@@ -198,6 +199,49 @@
 
             <%- include ../views/partials/scripts.ejs %>
 
+
+
+
+                <script>
+                    function renderErrorMessage(message){
+                        return ` <div class="col-12 alert alert-danger">
+                            ${message}
+                                    </div>`
+                    }
+                    /* attach a submit handler to the form */
+                    $("#reserveRoomForm").submit(function (event) {
+
+                        /* stop form from submitting normally */
+                        event.preventDefault();
+
+                        /* get the action attribute from the <form action=""> element */
+                        var $form = $(this),
+                            url = $form.attr('action');
+
+                        /* Send the data using post with element id name and name2*/
+                        var posting = $.post(url, {
+                            fname: $('#fname').val(),
+                            lname: $('#lname').val(),
+                            email: $('#email').val(),
+                            room: $('#room').val(),
+                            arrivalDate: $('#date-arrival').val(),
+                            departureDate: $('#date-departure').val(),
+                            adults: $('#adults').val(),
+                            children: $('#adults').val(),
+
+                        });
+
+                        /* Alerts the results */
+                        posting.done(function (data) {
+                            //
+                        });
+                        posting.fail(function (err) {
+                            $(".errorMessage").append(renderErrorMessage(err.responseJSON.message))
+                          
+                            console.log(err.responseJSON.message)
+                        });
+                    });
+                </script>
 
 </body>
 
